# hernanbari.github.io

./: CNAME  design-lavender.html  design-peach.html  design-sage.html  design-slate_blue.html  generate_site.py  index.html  pyproject.toml  resume.tex
