[tool.poetry]
name = "hernanbari-github-io"
version = "0.1.0"
description = ""
authors = ["hernanbari <hbari@dc.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "^0.12.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
